fix wrap style

--- a/packages/app/src/pages/account/index.less
+++ b/packages/app/src/pages/account/index.less
@@ -124,9 +124,12 @@
 		position: relative;
 		z-index: 55;
 
+		.ant-tabs-nav-wrap {
+			justify-content: flex-end;
+		}
+		
 		.ant-tabs-nav {
 			margin: 0 20px 20px 0;
-			justify-content: flex-end;
 		}
 
 		.ant-tabs-nav::before {
